# dense_reconstruction

./: .gitignore  CMakeLists.txt  README.md  main.cpp
config/: config.yaml
src/: config.h  data_reader.h  depth_filter.cpp  depth_filter.h  frame.cpp  frame.h  pcl_viewer.cpp  pcl_viewer.h  viewer.cpp  viewer.h
